# vbrfix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Fixer/: Id3Tags.cpp  Mp3FileObject.cpp  Mp3FileObject.h  VbrFixer.cpp
include/vbrfix/: vbrfix.hpp
src/cli/: CommandReader.cpp  CommandReader.h  CommandReader.hpp  ConsoleFixer.cpp  ConsoleFixer.h  ConsoleFixer.hpp  main.cpp
src/core/: ApeTag.cpp  ApeTag.h  ApeTag.hpp  BitReader.h  BitReader.hpp  CrcCalc.cpp  CrcCalc.hpp  EndianHelper.cpp  EndianHelper.h  EndianHelper.hpp  FeedBackInterface.h  FeedBackInterface.hpp  FileBuffer.cpp  FileBuffer.h  FileBuffer.hpp  FileDataSource.hpp  FixerSettings.cpp  FixerSettings.h  FixerSettings.hpp  GenHelpers.h  IDataSource.hpp  Id3Tags.cpp  Id3Tags.h  Id3Tags.hpp  LyricsTag.cpp  LyricsTag.h  LyricsTag.hpp  MemoryDataSource.hpp  Mp3FileObject.cpp  Mp3FileObject.h  Mp3FileObject.hpp  Mp3FileObjectChecker.h  Mp3FileObjectChecker.hpp  Mp3Frame.cpp  Mp3Frame.h  Mp3Frame.hpp  Mp3Header.cpp  Mp3Header.h  Mp3Header.hpp  Mp3Reader.cpp  (+18 more)
src/lib/: vbrfix_lib.cpp
